--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -16,9 +16,12 @@
 \usepackage{bm}
 \usepackage{siunitx}
 \usepackage{graphicx}
+\usepackage{wrapfig}
+%\usepackage{picins}
 \usepackage[section]{placeins}
 \usepackage{babel}
 \usepackage[hyphens]{url}
+\usepackage[shortlabels]{enumitem}
 \usepackage{listings}
 \usepackage[numbib, chapter]{tocbibind}
 \usepackage[colorlinks=true, linkcolor=black, citecolor=blue, urlcolor=blue, unicode=true]{hyperref}
