continued with ub calculation

--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -37,6 +37,17 @@
 
 @book
 {
+	Scarpino2011,
+	author = {Scarpino, M.},
+	title = {{OpenCL in Action}},
+	year = {2011},
+	publisher = {},
+	isbn = {978-1-617-29017-6},
+}
+
+
+@book
+{
 	Arens2015,
 	author = {Arens, T. and Hettlich, F. and Karpfinger, C. and Kockelkorn, U. and Lichtenegger, K. and Stachel, H.},
 	title = {{Mathematik, 3. Auflage}},
